hito5/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cardis
  labels:
    app: cardis
    project: disia-grupo6
    purpose: cardiovascular-risk-prediction
