hito5/kubernetes/retrain-webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cardis-retrain-webhook
  namespace: cardis
spec:
  selector:
    matchLabels:
      app: retrain-webhook
  template:
    metadata:
      labels:
        app: retrain-webhook
    spec:
      serviceAccountName: cardis-webhook-sa
      containers:
        - name: webhook
          image: cardis/retrain-webhook:1.0.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cardis-retrain-webhook
  namespace: cardis
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: retrain-webhook
